# MarinSkyRL

./: .gitignore  README.md  ep_probe_local.py  ep_smoke_local.py
.claude/projects/build_marinskyrl_torch211/_build_torch211/: build_fla_overlay_torch211.sh  probe_routed_experts_torch211.sh  r3_full_build_torch211.sh  run_gdn_torch211.sbatch  skyrl_megatron_vllm_r3_torch211.def
skyrl-gym/skyrl_gym/envs/: __init__.py
skyrl-gym/skyrl_gym/envs/aime/: env.py  utils.py
skyrl-gym/skyrl_gym/envs/ifeval/: env.py  utils.py
skyrl-gym/tests/: test_ifeval.py
skyrl-train/: README.md  pyproject.toml
skyrl-train/docs/configuration/: config.rst
skyrl-train/docs/fp8_inference/: README.md
skyrl-train/examples/async/: async_trainer.py
skyrl-train/examples/best_of_n_distillation/: main_best_of_n.py  run_best_of_n.sh
skyrl-train/examples/cp_longctx/: run_cp_longctx.sh
skyrl-train/examples/fully_async/: main_async.py
skyrl-train/examples/on_policy_distillation_logits/: main_on_policy_distill_logits.py  run_distill_logits.sh
skyrl-train/examples/terminal_bench/: _harbor_compat.py  dataset.py  fd_monitor.py  harbor_config.py  rollout_coordinator.py  terminal_bench_generator.py
skyrl-train/examples/terminal_bench/entrypoints/: main_tbench.py  main_tbench_generate.py  main_tbench_opd.py  main_tbench_opd_logits.py
skyrl-train/examples/terminal_bench/terminal_bench_config/: terminal_bench.yaml
skyrl-train/integrations/verifiers/: verifiers_generator.py
skyrl-train/scripts/: convert_fused_moe_to_hf.py
skyrl-train/skyrl_train/: distillation_trainer.py  fully_async_trainer.py  model_wrapper.py  trainer.py  training_batch.py
skyrl-train/skyrl_train/callbacks/: __init__.py  builtin.py
skyrl-train/skyrl_train/callbacks/database/: __init__.py  config.py  models.py  utils.py
skyrl-train/skyrl_train/config/: ppo_base_config.yaml
skyrl-train/skyrl_train/config/skyrl_gym_config/: default.yaml
skyrl-train/skyrl_train/dataset/: preprocess.py  replay_buffer.py
skyrl-train/skyrl_train/distributed/: cp_utils.py  deepep.py  dispatch.py  expert_parallel.py  fsdp_strategy.py  fsdp_utils.py  muon_hybrid.py  utils.py
skyrl-train/skyrl_train/entrypoints/: main_base.py
skyrl-train/skyrl_train/generators/: base.py  skyrl_gym_generator.py  step_wise_generator.py  utils.py
skyrl-train/skyrl_train/inference_engines/: base.py  inference_engine_client.py  inference_engine_client_http_endpoint.py  ray_wrapped_inference_engine.py  remote_inference_engine.py  teacher_engine_client.py
skyrl-train/skyrl_train/inference_engines/sglang/: sglang_engine.py
skyrl-train/skyrl_train/inference_engines/vllm/: utils.py  vllm_engine.py
skyrl-train/skyrl_train/models/: qwen3_5_vlm.py  qwen3_next_gdn.py  router_replay.py
skyrl-train/skyrl_train/models/layers/: moe.py  moe_swap.py  moe_weight_remap.py
skyrl-train/skyrl_train/utils/: data_tracker.py  distillation_utils.py  hf_load_retry.py  ipv4_patch.py  logging_utils.py  numa.py  pbs_shaping.py  ppo_utils.py  reward_shaping.py  span_tagger.py  stale_clip.py  test_delta_parser.py  think_budget.py  torch_utils.py  utils.py  zclip.py
skyrl-train/skyrl_train/weight_sync/: weight_extractor_utils.py
skyrl-train/skyrl_train/workers/: worker.py  worker_utils.py
skyrl-train/skyrl_train/workers/fsdp/: fsdp_worker.py
skyrl-train/skyrl_train/workers/megatron/: megatron_worker.py
skyrl-train/tests/cpu/: test_best_of_n_selection.py  test_buffer_checkpoint.py  test_engine_placement_strategy.py  test_ep_config_noop.py  test_ep_fsdp_grouped_load_smoke.py  test_ep_fsdp_grouped_sync_smoke.py  test_policy_strict_spread_pg.py  test_resolve_pinned_local_rank.py  test_resume_overshoot.py  test_teacher_engine_client.py
skyrl-train/tests/cpu/algorithms/: test_distillation_losses.py  test_losses.py
skyrl-train/tests/cpu/data/: ppo_base_pre_cp.yaml  ppo_base_pre_ep.yaml
skyrl-train/tests/cpu/dataset/: test_preprocess.py
skyrl-train/tests/cpu/distributed/: test_clip_grad_cpu_offload.py  test_cp_config.py  test_cp_mesh.py  test_ep_mesh.py  test_muon_hybrid.py  test_torch_cp_available.py
skyrl-train/tests/cpu/generators/: test_dcp_config.py  test_normalize_prompt_token_ids.py  test_normalize_token_ids_response_side.py  test_routed_experts_alignment.py  test_tis_alignment.py  test_utils.py
skyrl-train/tests/cpu/inf_engines/: test_dcp_plumbing.py  test_vllm_dcp_available.py
skyrl-train/tests/cpu/models/: test_attn_backend.py  test_moe_weight_remap.py
skyrl-train/tests/cpu/reward/: test_antithrash_component.py  test_composite_loop_noop.py  test_pbs_shaping.py  test_span_tagger.py  test_terminate_component.py  test_test_delta_parser.py  test_think_budget.py  test_token_channel_noop.py  test_token_channel_threads.py
skyrl-train/tests/cpu/utils/: test_ppo_utils.py
skyrl-train/tests/gpu/: _zigzag_oracle.py  diag_ep8_disagg_engine_disk.py  diag_ep8_weight_disk_ref.py  diag_ep_weight_sync_compare.py  mixtral_ep1_fsdp_smoke.py  mixtral_ep1_fsdp_smoke.sbatch  run_pbs_advantage_2gpu.sbatch  run_pin_smoke_reformo.sbatch  run_stage34_dcp_0202sif_reformo.sbatch  run_stage3_dcp_0202sif_reformo.sbatch  run_stage3_dcp_reformo.sbatch  run_stage3_dcp_venv_reformo.sbatch  run_stage6_cp_reformo.sbatch  run_stage6_reformo.sbatch  run_think_weighted_loss_2gpu.sbatch  test_cp_e2e_grpo.py  test_cp_forward.py  test_cp_logprob_parity.py  test_dcp_longctx_oom.py  test_dcp_rollout_parity.py  test_deepep_parity.py  test_e2e_moe_rl_step.py  test_e2e_moe_rl_step_80b.py  test_expert_parallel_inference.py  test_expert_parallel_train.py  test_grpo_sp_sanity.py  test_per_gpu_bundle_pinning.py  test_save_load_model.py  test_sdpa_flash_parity.py
skyrl-train/tests/gpu/gpu_ci/: test_grouped_gemm_parity.py  test_inference_engine_client_http_endpoint.py  test_pbs_advantage_2gpu.py  test_router_replay_eager.py  test_think_weighted_loss_2gpu.py
